--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
             "presentation": {
                 "reveal": "always",
                 "clear": true,
-                "panel": "shared"
+                "panel": "shared",
+                "focus": true
             }
         },
         {
@@ -18,7 +19,8 @@
             "presentation": {
                 "reveal": "always",
                 "clear": true,
-                "panel": "shared"
+                "panel": "shared",
+                "focus": true
             }
         }
     ]
