--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "doro"
+name = "lsp-client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-crossterm = "0.26.1"
+lsp-types = "0.94.0"
+serde_json = "1.0.97"
