--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
-[package]
-name = "lsp-client"
-version = "0.1.0"
-edition = "2021"
+[profile.release]
+codegen-units = 1
+lto = true
+panic = "abort"
+strip = true
 
-[dependencies]
-home = "0.5.4"
-ra_ap_cfg = "0.0.149"
-ra_ap_ide = "0.0.149"
-ra_ap_ide_db = "0.0.149"
-ra_ap_project_model = "0.0.149"
-ra_ap_rust-analyzer = "0.0.149"
-ra_ap_vfs = "0.0.149"
-rustc-host = "0.1.7"
+[workspace]
+members = [
+    "doro",
+    "ui",
+    "ui-macros",
+    "ui-elements"
+]
